[gd_scene load_steps=7 format=3 uid="uid://bndn1sx8yhjxw"]

[ext_resource type="Script" uid="uid://bvlmftvqligpu" path="res://Scripts/reglas.gd" id="1_4iifx"]
[ext_resource type="Texture2D" uid="uid://xn0ew4nddwmo" path="res://Images/test/flecha.png" id="1_h813v"]
[ext_resource type="Texture2D" uid="uid://bgb014lbv4p2p" path="res://Images/test/volver.png" id="3_77idx"]
[ext_resource type="Script" uid="uid://mo1visyko01i" path="res://Scripts/btn_menu.gd" id="4_77idx"]
[ext_resource type="AudioStream" uid="uid://kf1c3t0v75k0" path="res://Music/Test/menu_chill.wav" id="5_08qrv"]
[ext_resource type="AudioStream" uid="uid://bmthy11a5bnsc" path="res://Sound effects/Test/button sound.wav" id="6_sgipc"]

[node name="reglas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4iifx")

[node name="titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.477
anchor_top = 0.129
anchor_right = 0.477
anchor_bottom = 0.132
offset_left = -283.448
offset_top = -34.4
offset_right = 283.552
offset_bottom = 32.8
theme_override_font_sizes/font_size = 50
text = "Establecer reglas"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 135.0
offset_right = -165.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="difi" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.198
anchor_top = 0.318
anchor_right = 0.198
anchor_bottom = 0.318
offset_left = -127.752
offset_top = -20.8
offset_right = 59.248
offset_bottom = 21.2
theme_override_font_sizes/font_size = 30
text = "Dificultad de la IA"
horizontal_alignment = 1

[node name="izda" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.508
anchor_top = 0.319
anchor_right = 0.508
anchor_bottom = 0.319
offset_left = -29.192
offset_top = -29.4
offset_right = 29.808
offset_bottom = 29.6
icon = ExtResource("1_h813v")
expand_icon = true

[node name="elecc" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.621
anchor_top = 0.318
anchor_right = 0.621
anchor_bottom = 0.318
offset_left = -78.9041
offset_top = -20.8
offset_right = 78.0959
offset_bottom = 21.2
theme_override_font_sizes/font_size = 30
text = "FÃ¡cil"
horizontal_alignment = 1

[node name="dcha" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.734
anchor_top = 0.322
anchor_right = 0.734
anchor_bottom = 0.322
offset_left = 29.384
offset_top = 29.8
offset_right = 88.384
offset_bottom = 88.8
rotation = -3.14159
icon = ExtResource("1_h813v")
expand_icon = true

[node name="volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.928
anchor_top = 0.89
anchor_right = 0.928
anchor_bottom = 0.89
offset_left = -46.272
offset_top = -48.0
offset_right = 45.728
offset_bottom = 48.0
icon = ExtResource("3_77idx")
expand_icon = true
script = ExtResource("4_77idx")

[node name="MenuChill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_08qrv")
bus = &"Music"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_sgipc")
volume_db = 15.0
bus = &"Sound effects"

[connection signal="pressed" from="izda" to="." method="_on_left_pressed"]
[connection signal="pressed" from="dcha" to="." method="_on_right_pressed"]
[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
